Add file selection endpoint and logs